--- a/mine_fragments_numbness.ipynb
+++ b/mine_fragments_numbness.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database."
+     ]
+    }
+   ],
    "source": [
     "import sys; sys.path.insert(0, '..')\n",
     "import itertools"
@@ -33,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 264,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import get_topic_model_concordance as topic_concordancer\n",
     "from utils import blacklab, db, text\n",
@@ -44,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
