--- a/mine_fragments_sit_2.ipynb
+++ b/mine_fragments_sit_2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
    ],
    "source": [
     "main_node = \"sit\"\n",
-    "delete_main_node(\"numbness\")\n",
+    "#delete_main_node(main_node)\n",
     "add_main_node(main_node)"
    ]
   },
@@ -322,8 +322,117 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 268,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0.233*\"sit\" + 0.089*\"seconds\" + 0.056*\"hour\" + 0.039*\"stop\" + 0.032*\"move\" + 0.029*\"point\" + 0.027*\"half\" + 0.026*\"end\" + 0.026*\"week\" + 0.023*\"horse\"\n",
+      "\n",
+      "\n",
+      "1\n",
+      "0.149*\"talk\" + 0.095*\"thing\" + 0.078*\"happen\" + 0.077*\"hear\" + 0.055*\"listen\" + 0.052*\"story\" + 0.049*\"life\" + 0.041*\"talk_about\" + 0.024*\"one_day\" + 0.023*\"question\"\n",
+      "\n",
+      "\n",
+      "2\n",
+      "0.555*\"do_not\" + 0.108*\"give\" + 0.035*\"bread\" + 0.034*\"truck\" + 0.029*\"understand\" + 0.022*\"word\" + 0.021*\"piece_of\" + 0.014*\"how_long\" + 0.009*\"care\" + 0.009*\"food\"\n",
+      "\n",
+      "\n",
+      "3\n",
+      "0.133*\"my_mother\" + 0.125*\"my_father\" + 0.051*\"my_sister\" + 0.046*\"my_brother\" + 0.044*\"hand\" + 0.044*\"mother\" + 0.032*\"father\" + 0.032*\"hold\" + 0.025*\"come_home\" + 0.023*\"brother\"\n",
+      "\n",
+      "\n",
+      "4\n",
+      "0.142*\"man\" + 0.127*\"sit\" + 0.119*\"child\" + 0.097*\"woman\" + 0.025*\"beautiful\" + 0.024*\"synagogue\" + 0.016*\"wear\" + 0.016*\"shoe\" + 0.015*\"downstairs\" + 0.015*\"explain\"\n",
+      "\n",
+      "\n",
+      "5\n",
+      "0.269*\"sit\" + 0.141*\"back\" + 0.061*\"find\" + 0.042*\"seat\" + 0.034*\"front\" + 0.025*\"afraid\" + 0.022*\"wood\" + 0.018*\"tree\" + 0.018*\"throw\" + 0.016*\"forest\"\n",
+      "\n",
+      "\n",
+      "6\n",
+      "0.087*\"sit\" + 0.074*\"jewish\" + 0.068*\"girl\" + 0.062*\"school\" + 0.043*\"kid\" + 0.035*\"year\" + 0.031*\"boy\" + 0.029*\"class\" + 0.028*\"learn\" + 0.025*\"teacher\"\n",
+      "\n",
+      "\n",
+      "7\n",
+      "0.342*\"people\" + 0.057*\"sit\" + 0.057*\"a_lot\" + 0.045*\"die\" + 0.029*\"person\" + 0.027*\"group\" + 0.025*\"dead\" + 0.025*\"forget\" + 0.022*\"survive\" + 0.019*\"people_who\"\n",
+      "\n",
+      "\n",
+      "8\n",
+      "0.190*\"could_not\" + 0.110*\"place\" + 0.052*\"sleep\" + 0.047*\"stand\" + 0.043*\"stay\" + 0.037*\"water\" + 0.023*\"each_other\" + 0.022*\"barrack\" + 0.021*\"push\" + 0.021*\"move\"\n",
+      "\n",
+      "\n",
+      "9\n",
+      "0.088*\"sit\" + 0.063*\"guy\" + 0.057*\"camp\" + 0.040*\"put\" + 0.039*\"wagon\" + 0.037*\"over_there\" + 0.034*\"soldier\" + 0.030*\"foot\" + 0.028*\"ss\" + 0.027*\"guard\"\n",
+      "\n",
+      "\n",
+      "10\n",
+      "0.194*\"sit\" + 0.088*\"german\" + 0.047*\"kill\" + 0.037*\"office\" + 0.035*\"meet\" + 0.023*\"let_'s\" + 0.023*\"drink\" + 0.021*\"Mr.\" + 0.019*\"end_of\" + 0.018*\"Russians\"\n",
+      "\n",
+      "\n",
+      "11\n",
+      "0.152*\"make\" + 0.097*\"sit\" + 0.087*\"big\" + 0.055*\"watch\" + 0.040*\"try_to\" + 0.039*\"play\" + 0.023*\"ground\" + 0.020*\"clothes\" + 0.018*\"buy\" + 0.018*\"change\"\n",
+      "\n",
+      "\n",
+      "12\n",
+      "0.429*\"sit_down\" + 0.096*\"start\" + 0.045*\"write\" + 0.025*\"able_to\" + 0.023*\"long\" + 0.018*\"step\" + 0.017*\"finally\" + 0.014*\"letter\" + 0.014*\"minute\" + 0.014*\"death\"\n",
+      "\n",
+      "\n",
+      "13\n",
+      "0.113*\"sit\" + 0.067*\"chair\" + 0.065*\"door\" + 0.062*\"window\" + 0.056*\"open\" + 0.045*\"read\" + 0.044*\"front_of\" + 0.039*\"speak\" + 0.037*\"close\" + 0.034*\"book\"\n",
+      "\n",
+      "\n",
+      "14\n",
+      "0.151*\"train\" + 0.084*\"sit\" + 0.057*\"run\" + 0.053*\"car\" + 0.036*\"head\" + 0.035*\"on_top\" + 0.034*\"town\" + 0.028*\"shoot\" + 0.025*\"start\" + 0.024*\"arrive\"\n",
+      "\n",
+      "\n",
+      "15\n",
+      "0.087*\"leave\" + 0.065*\"sit_next\" + 0.063*\"picture\" + 0.059*\"side\" + 0.058*\"family\" + 0.027*\"left\" + 0.027*\"my_husband\" + 0.026*\"wife\" + 0.024*\"my_wife\" + 0.022*\"live\"\n",
+      "\n",
+      "\n",
+      "16\n",
+      "0.110*\"walk\" + 0.108*\"house\" + 0.093*\"sit\" + 0.053*\"food\" + 0.045*\"look_at\" + 0.032*\"little_bit\" + 0.031*\"street\" + 0.029*\"polish\" + 0.019*\"pass\" + 0.017*\"road\"\n",
+      "\n",
+      "\n",
+      "17\n",
+      "0.203*\"sit\" + 0.076*\"cry\" + 0.057*\"feel\" + 0.029*\"kind_of\" + 0.027*\"what_happen\" + 0.026*\"Germany\" + 0.021*\"drive\" + 0.018*\"Israel\" + 0.018*\"find_out\" + 0.016*\"bad\"\n",
+      "\n",
+      "\n",
+      "18\n",
+      "0.132*\"room\" + 0.118*\"sit\" + 0.081*\"put\" + 0.065*\"floor\" + 0.045*\"bed\" + 0.043*\"stand\" + 0.034*\"corner\" + 0.029*\"stand_up\" + 0.027*\"wall\" + 0.026*\"kitchen\"\n",
+      "\n",
+      "\n",
+      "19\n",
+      "0.192*\"time\" + 0.149*\"sit\" + 0.079*\"bench\" + 0.059*\"of_course\" + 0.054*\"Jews\" + 0.029*\"hide\" + 0.027*\"inside\" + 0.026*\"jew\" + 0.022*\"not_allow\" + 0.021*\"park\"\n",
+      "\n",
+      "\n",
+      "20\n",
+      "0.163*\"sit\" + 0.136*\"work\" + 0.070*\"wait\" + 0.065*\"do_not\" + 0.052*\"war\" + 0.042*\"come_back\" + 0.031*\"give\" + 0.023*\"money\" + 0.023*\"job\" + 0.019*\"suppose\"\n",
+      "\n",
+      "\n",
+      "21\n",
+      "0.199*\"sit\" + 0.046*\"Germans\" + 0.037*\"go_back\" + 0.037*\"ghetto\" + 0.026*\"nice\" + 0.025*\"city\" + 0.020*\"dress\" + 0.020*\"go_through\" + 0.019*\"Poland\" + 0.017*\"part_of\"\n",
+      "\n",
+      "\n",
+      "22\n",
+      "0.250*\"remember\" + 0.138*\"table\" + 0.064*\"sit_around\" + 0.043*\"sort_of\" + 0.033*\"sit\" + 0.031*\"thing\" + 0.024*\"must_have\" + 0.024*\"my_parent\" + 0.015*\"meal\" + 0.012*\"dining_room\"\n",
+      "\n",
+      "\n",
+      "23\n",
+      "0.162*\"day\" + 0.105*\"eat\" + 0.092*\"night\" + 0.048*\"bring\" + 0.048*\"morning\" + 0.034*\"evening\" + 0.033*\"at_night\" + 0.025*\"dark\" + 0.021*\"till\" + 0.020*\"fact\"\n",
+      "\n",
+      "\n",
+      "24\n",
+      "0.153*\"sit\" + 0.068*\"home\" + 0.066*\"friend\" + 0.058*\"call\" + 0.041*\"time\" + 0.040*\"good\" + 0.035*\"live\" + 0.032*\"send\" + 0.016*\"fall\" + 0.016*\"bomb\"\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i,element in enumerate(result['topic_documents']):\n",
     "    print (i)\n",
@@ -365,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -548,17 +657,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 239,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mid node exists cannot be added\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "add_testimonial_fragments(fragments)"
    ]
@@ -572,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -728,17 +829,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 248,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mid node exists cannot be added\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "add_testimonial_fragments(fragments)"
    ]
@@ -752,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -908,17 +1001,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 257,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mid node exists cannot be added\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "add_testimonial_fragments(fragments)"
    ]
@@ -932,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -1115,17 +1200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 267,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mid node exists cannot be added\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "add_testimonial_fragments(fragments)"
    ]
