--- a/mine_fragments_sample-Copy1.ipynb
+++ b/mine_fragments_sample-Copy1.ipynb
@@ -289,7 +289,7 @@
    ],
    "source": [
     "main_node = \"\"\n",
-    "#delete_main_node(main_node)\n",
+    "#delete_main_node(\"numbness\")\n",
     "add_main_node(main_node)"
    ]
   },
